# myfavfiles

./: .env  .gitignore  Cargo.toml  Makefile.toml  README.md  TODO.md  dev.env  notes
.github/workflows/: rust_build-test.yml  rust_clippy.yml
frontend/: index.html  second_page.html
migrations/: 20220220151740_create-base.sql  20220621151812_remove_plattform_role_permissions_relation.sql  20220621153031_remove_group_role_permissions_relation.sql  20220623172300_add_array_unique_and_triggers.sql  20220624160155_invite_code_improvements.sql  20220629063741_add_missing_defaults_to_uuids.sql  20220901150656_Add_default_is_admin_value.sql  20220902135309_add_group_member_is_admim_default_value.sql  20221006172044_add_permissions.sql
myfavfiles/: Cargo.toml
myfavfiles/src/: main.rs
myfavfiles_api/: Cargo.toml
myfavfiles_api/src/: auth.rs  database.rs  handlers.rs  lib.rs  main.rs
myfavfiles_api/src/auth/: token.rs
myfavfiles_api/src/database/: actions.rs  cache.rs  driver.rs  entities.rs  loaders.rs  macros.rs  password.rs  relation.rs  repository.rs
myfavfiles_api/src/database/entities/: group.rs  group_file_share.rs  group_member.rs  group_member_role.rs  group_role.rs  invite_code.rs  platform_role.rs  user.rs  user_file_share.rs  user_role.rs
myfavfiles_api/src/database/loaders/: cached.rs  cacheless.rs  group.rs  group_file_share.rs  group_member.rs  group_role.rs  platform_role.rs  user.rs  user_file_share.rs
myfavfiles_api/src/database/relation/: implementation.rs
myfavfiles_api/src/database/repository/: group.rs  group_member.rs  group_role.rs  user_file_share.rs
myfavfiles_api/src/handlers/: graphql.rs
myfavfiles_api/src/handlers/graphql/: authenticated.rs  error.rs  object.rs  private.rs  public.rs  query.rs  unauthorised.rs
myfavfiles_api/src/handlers/graphql/authenticated/: query.rs
myfavfiles_api/src/handlers/graphql/authenticated/object/: group_file_share.rs  group_member.rs  group_role.rs  platform_role.rs  user.rs  user_file_share.rs
myfavfiles_api/src/handlers/graphql/object/: group.rs  group_file_share.rs  group_member.rs  group_role.rs  platform_role.rs  user.rs  user_file_share.rs
myfavfiles_api/src/handlers/graphql/private/: data.rs  mutation_schema.rs  object.rs  query.rs  query_schema.rs
myfavfiles_api/src/handlers/graphql/private/data/: group.rs  group_file_share.rs  group_member.rs  group_role.rs  platform_role.rs  user.rs  user_file_share.rs
myfavfiles_api/src/handlers/graphql/private/object/: group.rs  group_member.rs  group_role.rs  platform_role.rs  user_file_share.rs
myfavfiles_api/src/handlers/graphql/private/query_schema/: group.rs  group_file_share.rs  group_member.rs  group_role.rs  platform_role.rs  user.rs  user_file_share.rs
myfavfiles_api/src/handlers/graphql/public/: mutation.rs  query.rs
myfavfiles_api/src/handlers/graphql/public/object/: user.rs
myfavfiles_api/src/handlers/graphql/unauthorised/: mutation.rs  query.rs
myfavfiles_api/src/handlers/graphql/unauthorised/object/: login.rs  user.rs
myfavfiles_common/: Cargo.toml
myfavfiles_common/src/: config.rs  handler.rs
myfavfiles_frontend/: Cargo.toml
myfavfiles_frontend/src/: assets.rs  lib.rs  main.rs
resources/dev/: docker-compose.yml
src/: config.rs  database.rs  entities.rs  handlers.rs  main.rs
src/database/: entities.rs  loaders.rs
src/database/entities/: group.rs  group_member.rs  user.rs
src/database/loaders/: group.rs  group_member.rs
src/entities/: group.rs  group_member.rs  user.rs
src/handlers/: graphql.rs
src/handlers/graphql/: loaders.rs  query.rs
src/handlers/graphql/loaders/: group.rs  user.rs
src/handlers/graphql/object/: group.rs  group_member.rs  user.rs
