[package]
name = "myfavfiles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "~0.15.0"
envy = "~0.4.2"
serde = "~1.0"
serde_derive = "~1.0"
serde_json = "~1.0"

[dependencies.tokio]
version = "~1.17.0"
features = ["full"]

[dependencies.tower-http]
version = "~0.2.3"
features = ["fs", "trace"]

[dependencies.axum]
version = "~0.4.6"
featuers = ["json"]

[dependencies.sea-orm]
version = "~0.6.0"
default-features = false
features = ["sqlx-postgres", "runtime-actix-native-tls", "macros"]
