[package]
name = "myfavfiles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "~0.15.0"
envy = "~0.4.2"
serde = "~1.0"
serde_derive = "~1.0"
serde_json = "~1.0"
chrono = "^0"
time = "^0.3"
juniper = "~0.15.9"
juniper_hyper = "~0.8.0"
hyper = "~0.14.18"

[dependencies.uuid]
 version = "^0"
 features = ["serde"]

[dependencies.tokio]
version = "~1.17.0"
features = ["full"]

[dependencies.tower-http]
version = "~0.2.3"
features = ["fs", "trace"]

[dependencies.axum]
version = "~0.5.0"
featuers = ["json"]

[dependencies.sqlx]
version = "~0.5.11"
features = [
    "runtime-tokio-native-tls",
    "macros",
    "postgres",
    "tls",
    "chrono",
    "uuid",
]

[dependencies.sea-query]
version = "~0.23.0"
features = [
    "sqlx-postgres",
    "with-chrono",
    "with-uuid",
    "derive",
]