[workspace]
members = [
    "myfavfiles",
    "myfavfiles_api",
    "myfavfiles_common",
    "myfavfiles_frontend",
]

[workspace.dependencies]
axum = "0.6"

[workspace.dependencies.tokio]
version = "1.18.5"
features = ["full"]

[workspace.dependencies.uuid]
version = "1"
features = ["serde"]

[workspace.dependencies.tracing-subscriber]
version = "0.3"

[workspace.dependencies.tower-http]
version = "0.4.0"
features = ["trace"]
