[package]
name = "myfavfiles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
myfavfiles_api = { path = "../myfavfiles_api" }
myfavfiles_common = { path = "../myfavfiles_common" }
myfavfiles_frontend = { path = "../myfavfiles_frontend" }
axum = "0.5.0"

[dependencies.tokio]
version = "1.18.1"
features = ["full"]
