[package]
name = "myfavfiles_api"
version = "0.1.0"
edition = "2021"

# Upgrading Uuid:
# - uuid >= 1
# - sqlx >= 0.6
# - sea-query >= 0.26
#   https://github.com/graphql-rust/juniper/issues/1094
#   https://github.com/graphql-rust/juniper/milestone/4

[dependencies]
myfavfiles_common = { path = "../myfavfiles_common" }
async-trait = "0.1.53"
bcrypt = "0.13"
envy = "0.4.2"
hyper = "0.14.18"
jsonwebtoken = "8.1"
juniper = "0.15.10"
juniper_hyper = "0.8.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tower = "0.4"
thiserror = "1"
tracing = "0.1"

[dependencies.axum]
workspace = true

[dependencies.sea-query]
version = "0.25"
features = [
    "sqlx-postgres",
    "with-chrono",
    "with-uuid",
    "derive",
]

[dependencies.chrono]
version = "0"
features = ["serde"]
[dev-dependencies.chrono]
version = "0"
features = ["serde"]

[dependencies.sqlx]
version = "0.5"
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "tls",
    "chrono",
    "uuid",
]

[dependencies.tokio]
workspace = true

[dependencies.uuid]
 version = "0"
 features = ["serde"]
