[package]
name = "myfavfiles_api"
version = "0.1.0"
edition = "2021"

# Upgrading Uuid:
# - uuid >= 1
# - sqlx >= 0.6
# - sea-query >= 0.26
#   https://github.com/graphql-rust/juniper/issues/1094
#   https://github.com/graphql-rust/juniper/milestone/4

[dependencies]
myfavfiles_common = { path = "../myfavfiles_common" }
async-graphql-axum = "5.0"
async-trait = "0.1.53"
bcrypt = "0.13"
envy = "0.4.2"
hyper = "0.14.18"
jsonwebtoken = "8.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tower = "0.4"
thiserror = "1"
tracing = "0.1"
sea-query-binder = { version = "0.3", features = [
    "sqlx-postgres",
    "with-chrono",
    "with-json",
    "with-rust_decimal",
    "with-bigdecimal",
    "with-uuid",
    "with-time",
    "with-ipnetwork",
    "with-mac_address",
] }

[dependencies.async-graphql]
version = "5.0"
features = [
    "chrono",
    "tracing",
    "uuid"
]

[dependencies.axum]
workspace = true

[dependencies.sea-query]
version = "0.28"
# features = [
#     "sqlx-postgres",
#     "with-chrono",
#     "with-uuid",
#     "derive",
# ]

[dependencies.chrono]
version = "0"
features = ["serde"]

[dependencies.sqlx]
version = "0.6"
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "tls",
    "chrono",
    "uuid",
]

[dependencies.tokio]
workspace = true

[dependencies.uuid]
workspace = true
