[package]
name = "myfavfiles_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "myfavfiles_frontend"

[[bin]]
name = "myfavfiles_frontend"

[dependencies]
myfavfiles_common = { path = "../myfavfiles_common" }
iftree = "1.0.3"
tower = "0.4.12"

[dependencies.axum]
workspace = true

[dependencies.tower-http]
version = "0.3.2"
features = ["fs", "trace"]

[dependencies.tokio]
workspace = true
